--- a/ExampleProject/package.json
+++ b/ExampleProject/package.json
@@ -11,7 +11,8 @@
   },
   "dependencies": {
     "react": "16.13.1",
-    "react-native": "0.63.2"
+    "react-native": "0.63.2",
+    "react-native-in-app-update": "https://github.com/hussainimp/InAppUpdates"
   },
   "devDependencies": {
     "@babel/core": "^7.10.5",
